Fix header sticky overflow

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -12,7 +12,7 @@
   padding-right: 20px;
   margin-top: 10px;
   margin-bottom: 10px;
-  height: 69px;
+  height: 6%;
 
   position: sticky;
   top: 0;
